--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Navbar -->
     <div class="flex items-center justify-between">
       <!-- Logo -->
-      <a href="#" class="text-2xl font-bold">Service<span class="text-yellow-500">Hub</span></a>
+      <a href="#" class="text-2xl text-gray-700 font-bold">Service<span class="text-yellow-500">Hub</span></a>
 
       <!-- Hamburger Icon -->
       <div class="md:hidden" id="menu-toggle">
