Create a user dashboard frontend

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
         <a href="#about" class="hover:text-yellow-500">About US</a>
         <a href="#services" class="hover:text-yellow-500">Services</a>
         <a href="#support" class="hover:text-yellow-500">Support</a>
-        <a href="userform.html"
+        <a href="./userform.html"
           class="ml-4 bg-yellow-400 text-white px-4 py-2 rounded font-semibold hover:bg-yellow-500 transition">Login</a>
       </nav>
     </div>
@@ -127,83 +127,102 @@
 
 
   <!--Services Section-->
-  <section id="services" class="mt-10 bg-white rounded-md shadow p-4 md:p-6 max-w-screen-xl mx-auto md:my-5">
+  <section id="services" class="mt-10 bg-white rounded-md shadow p-4 md:p-6 max-w-screen-xl mx-auto md:my-5"
+    data-aos="fade-up">
     <h2 class="text-2xl font-bold text-center mb-6">Our Services</h2>
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6 md:ml-5">
-      <!-- Electrician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-2xl font-semibold">Electrician</h3>
-        <p class="text-gray-600 text-center mt-5">Skilled electricians available for wiring, lighting, and power-related
-          repairs or installations.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+    <div class="mt-5 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6 p-4">
+      <!-- Card 1 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=Z8GMtHiLgzDC&format=png&color=000000" alt="Plumbing Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">Electrical</h2>
+        <p class="text-gray-500 text-sm mb-4">Skilled electricians available for wiring, lighting, and
+          power-related repairs or installations.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- Plumber Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-2xl font-semibold">Plumber</h3>
-        <p class="text-gray-600 text-center mt-5">Leakage issues, bathroom fittings, or full pipe installations — our
-          plumbers handle it all.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+      <!-- Card 2 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=32383&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">Plumber</h2>
+        <p class="text-gray-500 text-sm mb-4">Leakage issues, bathroom fittings, or full pipe installations
+          — our plumbers handle it all.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- Carpenter Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-2xl font-semibold">Carpenter</h3>
-        <p class="text-gray-600 text-center mt-5">Professional carpentry services for doors, windows, furniture, and
-          wooden repairs or custom work.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+      <!-- Card 3 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=63386&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">Carpenter</h2>
+        <p class="text-gray-500 text-sm mb-4">Professional carpentry services for doors, windows, furniture,
+          and wooden repairs or custom work.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- CCTV Technician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-2xl font-semibold">CCTV Technician</h3>
-        <p class="text-gray-600 text-center mt-5">Secure your property with CCTV installation, maintenance, and
+      <!-- Card 4 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=6421&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">CCTV Technician</h2>
+        <p class="text-gray-500 text-sm mb-4">Secure your property with CCTV installation, maintenance, and
           troubleshooting services.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- TV Technician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-2xl font-semibold">TV Technician</h3>
-        <p class="text-gray-600 text-center mt-5">Get expert help with LED/LCD TV setup, wall mounting, or screen/audio
-          issues.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+      <!-- Card 5 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=2772&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">TV Technician</h2>
+        <p class="text-gray-500 text-sm mb-4">Get expert help with LED/LCD TV setup, wall mounting, or
+          screen/audio issues.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- AC Technician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-2xl font-semibold">AC Technician</h3>
-        <p class="text-gray-600 text-center mt-5">Stay cool with AC repair, gas filling, cleaning, and installation
-          services from our pros.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+      <!-- Card 6 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=7154&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">AC Technician</h2>
+        <p class="text-gray-500 text-sm mb-4">Stay cool with AC repair, gas filling, cleaning, and
+          installation services from our pros.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- Refrigerator Technician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-xl md:text-2xl font-semibold">Refrigerator Technician</h3>
-        <p class="text-gray-600 text-center mt-5">Cooling issues, compressor faults, or gas refill — our fridge experts
-          are ready to help.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+      <!-- Card 7 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=282&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">Refrigerator Technician</h2>
+        <p class="text-gray-500 text-sm mb-4">
+          Cooling issues, compressor faults, or gas refill — our fridge experts are ready to help.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- WaterHeater Technician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-xl md:text-2xl font-semibold">WaterHeater Technician</h3>
-        <p class="text-gray-600 text-center mt-5">Fix heating elements, leakage, or installation of geysers quickly with
-          our skilled technicians.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+      <!-- Card 8 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=65647&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">Geyser Technician</h2>
+        <p class="text-gray-500 text-sm mb-4">Fix heating elements, leakage, or installation of geysers quickly with our
+          skilled technicians.</p>
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-      <!-- Washing Machine Technician Card -->
-      <div class="bg-gray-50 rounded shadow-md p-4 flex flex-col items-center" data-aos="zoom-in">
-        <h3 class="text-xl md:text-2xl font-semibold">Washing Machine Technician</h3>
-        <p class="text-gray-600 text-center mt-5">Top load or front load, we fix motor, drum, and drainage problems with
+      <!-- Card 9 -->
+      <div class="bg-white rounded-xl shadow-md p-6 text-center" data-aos="zoom-in">
+        <img src="https://img.icons8.com/?size=100&id=54493&format=png&color=000000" alt="Heating Icon"
+          class="mx-auto w-12 h-12 mb-4" />
+        <h2 class="text-lg font-semibold mb-1">Washing Machine Technician</h2>
+        <p class="text-gray-500 text-sm mb-4">Top load or front load, we fix motor, drum, and drainage problems with
           care and speed.</p>
-        <button class="mt-5 bg-yellow-400 text-white font-bold px-4 py-2 rounded hover:bg-yellow-600 transition">Book
+        <button class="bg-yellow-500 text-zinc-900 font-semibold px-4 py-2 rounded hover:bg-yellow-400">Book
           Now</button>
       </div>
-    </div>
 
+    </div>
   </section>
 
   <section id="join-us" class="bg-gray-100 py-20 px-6">
@@ -215,7 +234,7 @@
           Are you an experienced electrician, plumber, carpenter or other skilled service provider?
           Join us to grow your career, reach more customers, and work on your own schedule.
         </p>
-        <a href="/join"
+        <a href="/joinus.html"
           class="inline-block bg-yellow-400 text-white font-semibold px-6 py-3 rounded-xl shadow hover:bg-yellow-600 transition">
           Register as a Worker
         </a>
@@ -310,5 +329,4 @@
 
   </script>
 </body>
-
 </html>
