--- a/public/verify.html
+++ b/public/verify.html
@@ -19,7 +19,7 @@
     </div>
     <h6 id="message" class="text-gray-700 text-lg font-medium">Verifying...</h6>
     <div id="login-link" class="mt-6 hidden">
-      <a href="/userform.html"
+      <a href="./userform.html"
         class="inline-block bg-yellow-500 hover:bg-yellow-600 text-white font-medium py-2 px-4 rounded-xl transition">
         Go to Login
       </a>
